feat - add login & logout forms, test functionality

--- a/src/styles/SignUpForm.module.css
+++ b/src/styles/SignUpForm.module.css
@@ -43,6 +43,8 @@ nav {
     margin-bottom: 20px;
 }
 
-.hidden {
-    display: none;
+.link {
+    color: inherit;
+    text-decoration: inherit;
+    font-weight: bold;
 }
