--- a/src/styles/ArticleCreateEditForm.module.css
+++ b/src/styles/ArticleCreateEditForm.module.css
@@ -1,10 +1,23 @@
-Form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+.container {
+    padding: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    border: 1px solid black;
+}
+
+.heading {
+    margin-bottom: 75px;
 }
 
 Button {
     margin: 5px;
+}
+
+.formfields {
+    font-size: 1.4rem;
+    float: left;
 }
