--- a/src/styles/LoginForm.module.css
+++ b/src/styles/LoginForm.module.css
@@ -1,4 +1,6 @@
 .container {
+    display: flex;
+    flex-direction: column;
     padding: 30px;
     position: absolute;
     top: 50%;
@@ -7,9 +9,4 @@
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
     border: 1px solid black;
-}
-
-.heading {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
 }
