--- a/src/styles/ArticlesPage.module.css
+++ b/src/styles/ArticlesPage.module.css
@@ -7,3 +7,10 @@
     display: flex;
     align-items: center;
 }
+
+.search {
+    display: flex;
+    justify-content: center;
+    width: 75%;
+}
+
