--- a/src/styles/ArticlesPage.module.css
+++ b/src/styles/ArticlesPage.module.css
@@ -1,3 +1,11 @@
+.subjectpane {
+    border: 1px solid black;
+    background-color: #f3efe8;
+    margin-bottom: 4px;
+    margin-top: 3px;
+    padding: 4px;
+}
+
 .loading {
     font-size: 2rem;
 }
