--- a/src/styles/LoginForm.module.css
+++ b/src/styles/LoginForm.module.css
@@ -9,4 +9,5 @@
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
     border: 1px solid black;
+    background-color: #f3efe8;
 }
