--- a/src/styles/ArticleCreateEditForm.module.css
+++ b/src/styles/ArticleCreateEditForm.module.css
@@ -7,6 +7,7 @@
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
     border: 1px solid black;
+    background-color: #f3efe8;
 }
 
 .heading {
