--- a/src/styles/ArticlesPage.module.css
+++ b/src/styles/ArticlesPage.module.css
@@ -1,7 +1,13 @@
+.mainheaders {
+    border: 1px solid black;
+    background-color: #f3efe8;
+    margin-top: 5px;
+}
+
 .subjectpane {
     border: 1px solid black;
     background-color: #f3efe8;
-    margin-bottom: 4px;
+    margin-bottom: 15px;
     margin-top: 3px;
     padding: 4px;
 }
@@ -12,6 +18,7 @@
 
 .cards {
     margin-bottom: 10px;
+    margin-top: 10px;
     display: flex;
     align-items: center;
 }
