--- a/src/styles/ArticlesPage.module.css
+++ b/src/styles/ArticlesPage.module.css
@@ -13,7 +13,10 @@
 }
 
 .loading {
-    font-size: 2rem;
+    display: flex;
+    width: 15%;
+    justify-content:center;
+    margin:0 auto;
 }
 
 .cards {
