--- a/src/styles/Article.module.css
+++ b/src/styles/Article.module.css
@@ -10,7 +10,7 @@
     font-weight: bolder;
     text-decoration: underline;
     font-size: 1.4rem;
-    color: #0E1C4F
+    color: #0E1C4F;
 }
 
 .profileinfo {
@@ -21,6 +21,10 @@
 
 .maininfo {
     text-align: center;
+}
+
+.subjectbadge {
+    color: #fff;
 }
 
 .imagecontainer {
