--- a/src/styles/ArticlePage.module.css
+++ b/src/styles/ArticlePage.module.css
@@ -2,4 +2,12 @@
     border: 1px solid black;
     background-color: #f3efe8;
     margin-top: 5px;
+    margin-bottom: 100px;
+}
+
+.commentplaceholder {
+    font-size: 1.5rem;
+    text-align: center;
+    padding-top: 10px;
+    margin-bottom: 10px;
 }
