--- a/src/styles/LogoutForm.module.css
+++ b/src/styles/LogoutForm.module.css
@@ -1,15 +1,26 @@
 .container {
-    padding: 30px;
+    padding: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     border: 1px solid black;
     background-color: #f3efe8;
+    text-align: center;
+    width: 90%;
+    max-width: 400px;
+    min-width: 280px;
+    box-sizing: border-box;
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: nowrap; 
 }
 
 .button {
-    margin: 5px;
+    flex: 0 0 auto; 
+    min-width: 60px;
 }
