maint - add submission messages to commentform, fix subject button css

--- a/src/styles/ArticlesPage.module.css
+++ b/src/styles/ArticlesPage.module.css
@@ -12,6 +12,11 @@
     padding: 4px;
 }
 
+.subjectpane Button {
+    font-size: 1.3rem;
+    margin:5px
+}
+
 .loading {
     display: flex;
     width: 15%;
